# govee-py

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-app.yml
govee_led_wez/: __init__.py  ble.py  color.py  govee.py  http.py  kelvin_rgb.py  models.py
tests/: test_kelvin.py  test_stuff.py
